[gd_scene load_steps=32 format=3 uid="uid://x1vaf8lwfkxy"]

[ext_resource type="Script" uid="uid://dfeg85ir6xrfp" path="res://enemies/bosses/death_god/death_god.gd" id="1_xohf5"]
[ext_resource type="Shader" uid="uid://ctwquyuv011n6" path="res://enemies/bosses/hit_flash.tres" id="2_7uu6w"]
[ext_resource type="Texture2D" uid="uid://wfxgn8edesdf" path="res://assets/bosses/death_god/death_god_spritesheet.png" id="2_ohlgh"]
[ext_resource type="Script" uid="uid://ce784vbetxrek" path="res://enemies/bosses/death_god/death_god_state_machine.gd" id="3_wag7a"]
[ext_resource type="PackedScene" uid="uid://dj1a2m3n587v3" path="res://components/monster_attack_component.tscn" id="3_xohf5"]
[ext_resource type="Script" uid="uid://dd0j8qliphxcd" path="res://enemies/bosses/death_god/death_god_wait_player_state.gd" id="4_aa67f"]
[ext_resource type="Script" uid="uid://2a5cbn3v7i4f" path="res://enemies/bosses/death_god/death_god_active_state.gd" id="5_m3i50"]
[ext_resource type="Script" uid="uid://571wcasqbwpd" path="res://enemies/bosses/death_god/death_god_attack_state.gd" id="6_54a7p"]
[ext_resource type="Script" uid="uid://byab0os2xgyl" path="res://enemies/bosses/death_god/death_god_summon_state.gd" id="7_x8unn"]
[ext_resource type="AudioStream" uid="uid://dw01i83lgqosd" path="res://assets/sfx/enemy/reaperboss/teleport.mp3" id="8_3xyub"]
[ext_resource type="PackedScene" uid="uid://cxpkfv5ts1c6w" path="res://enemies/bosses/death_god/dark_fire_ball.tscn" id="8_ebgg5"]
[ext_resource type="Script" uid="uid://cm18pbfflnuc6" path="res://enemies/bosses/death_god/death_god_rest_state.gd" id="9_t564h"]
[ext_resource type="AudioStream" uid="uid://b1xnces4i1tpo" path="res://assets/sfx/enemy/reaperboss/slice.mp3" id="9_tleyv"]
[ext_resource type="Script" uid="uid://dfcsd06ggh8xb" path="res://enemies/bosses/death_god/death_god_death_state.gd" id="11_7uu6w"]
[ext_resource type="AudioStream" uid="uid://ii6fpcsad78x" path="res://assets/sfx/enemy/reaperboss/shoot.mp3" id="12_0s1k6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lmb0m"]
shader = ExtResource("2_7uu6w")
shader_parameter/enabled = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_t564h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/Attack/SliceSound1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/Attack/SliceSound2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FiniteStateMachine/Summon/ShootSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ik1cy"]
resource_name = "attack"
length = 1.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterAttackComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.28, 0.99),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_deal_damage"
}, {
"args": [],
"method": &"_deal_damage"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/Attack/SliceSound1:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FiniteStateMachine/Attack/SliceSound2:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.87),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ebgg5"]
resource_name = "death"
length = 2.5000124
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2, 2.125, 2.25, 2.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]
}

[sub_resource type="Animation" id="Animation_m3i50"]
resource_name = "disappear"
length = 0.7
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.049999997, 0.099999994, 0.15, 0.19999999, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]
}

[sub_resource type="Animation" id="Animation_wag7a"]
resource_name = "fly"
length = 0.3750125
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_aa67f"]
resource_name = "idle"
length = 0.8750125
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_54a7p"]
resource_name = "reappear"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.049999997, 0.099999994, 0.15, 0.19999999, 0.25, 0.3, 0.35000002, 0.39999998, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 31]
}

[sub_resource type="Animation" id="Animation_x8unn"]
resource_name = "summon"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28, 29, 30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/Summon/ShootSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7050134),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7uu6w"]
_data = {
&"RESET": SubResource("Animation_t564h"),
&"attack": SubResource("Animation_ik1cy"),
&"death": SubResource("Animation_ebgg5"),
&"disappear": SubResource("Animation_m3i50"),
&"fly": SubResource("Animation_wag7a"),
&"idle": SubResource("Animation_aa67f"),
&"reappear": SubResource("Animation_54a7p"),
&"summon": SubResource("Animation_x8unn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohlgh"]
size = Vector2(21, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wag7a"]
size = Vector2(255, 216)

[sub_resource type="CircleShape2D" id="CircleShape2D_wag7a"]
radius = 21.023796

[sub_resource type="Animation" id="Animation_7uu6w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3ty02"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathGodSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xyub"]
_data = {
&"RESET": SubResource("Animation_7uu6w"),
&"hit_flash": SubResource("Animation_3ty02")
}

[node name="DeathGod" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_xohf5")
max_health = 100
metadata/_custom_type_script = "uid://haorpwtj2wmk"

[node name="DeathGodSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lmb0m")
position = Vector2(6, 0)
texture = ExtResource("2_ohlgh")
hframes = 51

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7uu6w")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 5.5)
shape = SubResource("RectangleShape2D_ohlgh")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "monster", "anim_player", "hit_flash_anim_player", "rest_timer")]
script = ExtResource("3_wag7a")
initial_state = NodePath("WaitPlayer")
monster = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
hit_flash_anim_player = NodePath("../HitFlashAnimationPlayer")
rest_timer = NodePath("../RestTimer")

[node name="WaitPlayer" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player_detection_area")]
script = ExtResource("4_aa67f")
player_detection_area = NodePath("../../PlayerDetection")

[node name="Active" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_m3i50")

[node name="Attack" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_54a7p")

[node name="TeleSound" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Attack"]
stream = ExtResource("8_3xyub")
bus = &"Sfx"

[node name="SliceSound1" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Attack"]
stream = ExtResource("9_tleyv")
bus = &"Sfx"

[node name="SliceSound2" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Attack"]
stream = ExtResource("9_tleyv")
bus = &"Sfx"

[node name="Summon" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_x8unn")
dark_fire_ball_scene = ExtResource("8_ebgg5")

[node name="ShootSound" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Summon"]
stream = ExtResource("12_0s1k6")
bus = &"Sfx"

[node name="Rest" type="Node" parent="FiniteStateMachine"]
script = ExtResource("9_t564h")

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource("11_7uu6w")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PlayerDetectionColiision" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("RectangleShape2D_wag7a")

[node name="BossUI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="BossUI"]
visible = false
custom_minimum_size = Vector2(100, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 8.0
offset_right = 50.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8

[node name="BulletHolder" type="Node" parent="."]

[node name="RestTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MonsterAttackComponent" parent="." instance=ExtResource("3_xohf5")]
damage_to_deal = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonsterAttackComponent"]
position = Vector2(31, 0)
shape = SubResource("CircleShape2D_wag7a")
debug_color = Color(0.9562945, 0, 0.5412691, 0.41960785)

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3xyub")
}
